fix: FeignUserCouponReader